tests/specs/check/dts_unresolved_import_entrypoint/entrypoint.out
TS2307 [ERROR]: Cannot find module 'asdfsdf' or its corresponding type declarations.
import foo from "asdfsdf";
                ~~~~~~~~~
    at file:///[WILDCARD]/foo.d.ts:1:17

error: Type checking failed.
